# MyCTFChallenge

AIS3_2024/Checker/Checker/: Checker.sln
AIS3_2024/Checker/Checker/Checker/: Checker.cpp  Checker.vcxproj.filters
AIS3_2024/Checker/Checker/Checker/x64/Debug/: Checker.exe.recipe  Checker.ilk  vc143.idb
AIS3_2024/Checker/Checker/Checker/x64/Release/: Checker.exe.recipe  Checker.ipdb
AIS3_2024/Checker/Driver/Driver/: Driver.inf  Driver.vcxproj  Driver.vcxproj.filters  source.c
AIS3_2024/Checker/Driver/Driver/x64/Release/: Driver.inf  Driver.sys.recipe
AIS3_2024/Checker/Driver/x64/Release/: Driver.cer
AIS3_2024/PixelClicker_Revenge/: b.py
AIS3_2024/PixelClicker_Revenge/src/: main.rs
Checker/: create_checker.py  find_false.py  solve.py
Checker/Checker/Checker/: Checker.vcxproj
Checker/Checker/Checker/x64/Debug/Checker.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog
Checker/Checker/Checker/x64/Release/: Checker.iobj
Checker/Checker/Checker/x64/Release/Checker.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog
Checker/Driver/: Driver.sln
Checker/Driver/Driver/x64/Release/Driver.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  Driver.lastbuildstate  link.write.1.tlog  signtool.command.1.tlog  signtool.read.1.tlog  (+3 more)
Checker/Driver/x64/Release/: Driver.sys  Driver.sys.i64
PixelClicker_Revenge/: Cargo.toml
TSCCTF2025/baby/: a.cpp  c.cpp  writeup.md
TSCCTF2025/hard/: Client1.py  README.md  Server.cpp  a.out  chacha20.hpp  flag  flag.c
TSCCTF2025/medium/: a.py  solve.py  writeup.md
(+14 files in other folders)
